Added first slides and demos

--- a/index.jade
+++ b/index.jade
@@ -8,6 +8,83 @@ html
     body
       section.slides.layout-regular.template-default
         article
-          h1 Hello World
+          h2 Lets Talk about...
+          h1 TypeScript
+          h3 by Tamino
+        article
+          h1 What is TypeScript?
+        article
+          h2 What is TypeScript?
+          ul.build
+            li ES6+ with optional typings
+            li Compiles to plain JavaScript
+            li Developed by Microsoft
+            li Very good support in VS Code
+            li Pushed by Google
+        article
+          h1 Static typed languages
+        article
+          h2 Static typed languages
+          ul.build
+            li
+              | Java
+              pre
+                | String name = 'Tamino';
+            li
+              | C#
+              pre
+                | string name = 'Tamino';
+            li
+              | Objective-C
+              pre
+                | NSString name = 'Tamino';
+        article
+          h1 Optionally typed
+        article
+          h2 Optionally typed
+          ul.build
+            li
+              | with type
+              pre
+                | const name: string = 'Tamino';
+            li
+              | without type
+              pre
+                | const name = 'Tamino';
+            li
+              | implies*
+              pre
+                | const name: any = 'Tamino';
+        article
+          h2 Optionally typed
+          ul
+            li
+              | with type
+              pre
+                | const name: string = 'Tamino';
+            li
+              | without type
+              pre
+                | const name = 'Tamino';
+            li
+              | implies
+              pre
+                | const name: string = 'Tamino';
+        article
+          h1 Why TypeScript?
+        article
+          h2 Why TypeScript?
+          ul.build
+            li Productivity
+            li Reliability
+        article
+          h1 Productivity
+        article
+          h1
+            a(href="https://www.typescriptlang.org/play/index.html#src=function%20shiftplanPublishedMailer(employment)%20%7B%0D%0A%20%20%20%20console.log(%0D%0A%20%20%20%20%20%20%20%20employment.name%20%2B%20'%3C'%20%2B%20employment.email%20%2B%20'%3E'%0D%0A%20%20%20%20)%3B%0D%0A%7D%0D%0A")
+              | Demo
+
+
+
 
       script(src='scripts.js')
