--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,15 @@ body {
       -ms-user-select: none;
           user-select: none;
 }
+.slides {
+  display: table;
+}
 article {
-  opacity: 0;
-  -webkit-transition: 0.2s opacity;
-  transition: 0.2s opacity;
-  padding: 50px;
-  position: absolute;
+  vertical-align: middle;
+  display: none;
+}
+article.current {
+  display: table-cell;
 }
 article:before,
 article:after {
@@ -43,67 +46,117 @@ article:before {
 }
 article:after {
   z-index: -1;
-  opacity: 0.8;
-  background-image: radial-gradient(75vw, #fff 0%, #eee 50%, #765 100%);
+  opacity: 0.95;
+  background-image: radial-gradient(75vw, #fff 0%, #eee 75%, #765 100%);
 }
 article.plain:before,
 article.plain:after {
   display: none;
 }
 article.section:after {
-  background-image: radial-gradient(75vw, #0ad159 0%, #22b75d 50%, #765 100%);
+  background-image: radial-gradient(75vw, #6c6 0%, #6c6 50%, #765 100%);
 }
-.far-past {
-  z-index: 3;
+article.section h1,
+article.section h2,
+article.section h3,
+article.section h4,
+article.section h5,
+article.section h6 {
+  color: #fff;
 }
-.past {
-  z-index: 4;
-}
-.current {
-  z-index: 5;
-  opacity: 1;
-}
-.next {
-  z-index: 6;
-}
-.far-next {
-  z-index: 7;
-}
-.slides > article:nth-child(39n+1):before {
+.slides > article:nth-child(30n+1):before {
   background-image: url("images/bg/1.jpg");
 }
-.slides > article:nth-child(39n+2):before {
+.slides > article:nth-child(30n+2):before {
   background-image: url("images/bg/2.jpg");
 }
-.slides > article:nth-child(39n+3):before {
+.slides > article:nth-child(30n+3):before {
   background-image: url("images/bg/3.jpg");
 }
-.slides > article:nth-child(39n+4):before {
+.slides > article:nth-child(30n+4):before {
   background-image: url("images/bg/4.jpg");
 }
-.slides > article:nth-child(39n+5):before {
+.slides > article:nth-child(30n+5):before {
   background-image: url("images/bg/5.jpg");
 }
-.slides > article:nth-child(39n+6):before {
+.slides > article:nth-child(30n+6):before {
   background-image: url("images/bg/6.jpg");
 }
-.slides > article:nth-child(39n+7):before {
+.slides > article:nth-child(30n+7):before {
   background-image: url("images/bg/7.jpg");
 }
-.slides > article:nth-child(39n+8):before {
+.slides > article:nth-child(30n+8):before {
   background-image: url("images/bg/8.jpg");
 }
-.slides > article:nth-child(39n+9):before {
+.slides > article:nth-child(30n+9):before {
   background-image: url("images/bg/9.jpg");
 }
-.slides > article:nth-child(39n+10):before {
+.slides > article:nth-child(30n+10):before {
   background-image: url("images/bg/10.jpg");
 }
-.slides > article:nth-child(39n+11):before {
+.slides > article:nth-child(30n+11):before {
   background-image: url("images/bg/11.jpg");
 }
-.slides > article:nth-child(39n+12):before {
+.slides > article:nth-child(30n+12):before {
   background-image: url("images/bg/12.jpg");
+}
+.slides > article:nth-child(30n+13):before {
+  background-image: url("images/bg/13.jpg");
+}
+.slides > article:nth-child(30n+14):before {
+  background-image: url("images/bg/14.jpg");
+}
+.slides > article:nth-child(30n+15):before {
+  background-image: url("images/bg/15.jpg");
+}
+.slides > article:nth-child(30n+16):before {
+  background-image: url("images/bg/16.jpg");
+}
+.slides > article:nth-child(30n+17):before {
+  background-image: url("images/bg/17.jpg");
+}
+.slides > article:nth-child(30n+18):before {
+  background-image: url("images/bg/18.jpg");
+}
+.slides > article:nth-child(30n+19):before {
+  background-image: url("images/bg/19.jpg");
+}
+.slides > article:nth-child(30n+20):before {
+  background-image: url("images/bg/20.jpg");
+}
+.slides > article:nth-child(30n+21):before {
+  background-image: url("images/bg/21.jpg");
+}
+.slides > article:nth-child(30n+22):before {
+  background-image: url("images/bg/22.jpg");
+}
+.slides > article:nth-child(30n+23):before {
+  background-image: url("images/bg/23.jpg");
+}
+.slides > article:nth-child(30n+24):before {
+  background-image: url("images/bg/24.jpg");
+}
+.slides > article:nth-child(30n+25):before {
+  background-image: url("images/bg/25.jpg");
+}
+.slides > article:nth-child(30n+26):before {
+  background-image: url("images/bg/26.jpg");
+}
+.slides > article:nth-child(30n+27):before {
+  background-image: url("images/bg/27.jpg");
+}
+.slides > article:nth-child(30n+28):before {
+  background-image: url("images/bg/28.jpg");
+}
+.slides > article:nth-child(30n+29):before {
+  background-image: url("images/bg/29.jpg");
+}
+.build > * {
+  -webkit-transition: opacity 0.2s ease-in-out 0.2s;
+  transition: opacity 0.2s ease-in-out 0.2s;
+}
+.to-build {
+  opacity: 0;
 }
 h1,
 h2,
@@ -111,5 +164,98 @@ h3,
 h4,
 h5,
 h6 {
-  color: #0ad159;
+  text-align: center;
+  color: #6c6;
+  text-shadow: 0 0 1px #000;
+  margin: 1vh;
+}
+a,
+a:visited,
+a:hover {
+  color: #6c6;
+}
+h1 {
+  font-size: 10vw;
+}
+h2 {
+  font-size: 5vw;
+}
+h3 {
+  font-size: 2.5vw;
+}
+ul {
+  font-size: 3vw;
+  line-height: 2em;
+  padding-left: 10vw;
+}
+/* Pretty printing styles. Used with prettify.js. */
+/* Vim sunburst theme by David Leibovic */
+.slides pre.prettyprint {
+  background-color: #000;
+  border-radius: 8px;
+  width: 90%;
+  font-size: 3vw;
+  margin: 0 auto;
+  padding: 0 2vw;
+  white-space: pre-wrap;
+/* string  - green */
+/* keyword - dark pink */
+/* comment - gray */
+/* type - light blue */
+/* literal - blue */
+/* punctuation - white */
+/* plaintext - white */
+/* html/xml tag    - light blue */
+/* html/xml attribute name  - khaki */
+/* html/xml attribute value - green */
+/* decimal - blue */
+}
+.slides pre.prettyprint .str {
+  color: #65b042;
+}
+.slides pre.prettyprint .kwd {
+  color: #e28964;
+}
+.slides pre.prettyprint .com {
+  color: #aeaeae;
+  font-style: italic;
+}
+.slides pre.prettyprint .typ {
+  color: #89bdff;
+}
+.slides pre.prettyprint .lit {
+  color: #3387cc;
+}
+.slides pre.prettyprint .pun {
+  color: #fff;
+}
+.slides pre.prettyprint .pln {
+  color: #fff;
+}
+.slides pre.prettyprint .tag {
+  color: #89bdff;
+}
+.slides pre.prettyprint .atn {
+  color: #bdb76b;
+}
+.slides pre.prettyprint .atv {
+  color: #65b042;
+}
+.slides pre.prettyprint .dec {
+  color: #3387cc;
+}
+.slides ol.linenums {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #aeaeae;
+}
+.slides li.L0,
+.slides li.L1,
+.slides li.L2,
+.slides li.L3,
+.slides li.L5,
+.slides li.L6,
+.slides li.L7,
+.slides li.L8 {
+  list-style-type: none;
 }
