--- a/styles.styl
+++ b/styles.styl
@@ -21,12 +21,15 @@ body
 random(min,max)
   return floor(math(0, 'random')*(max - min + 1) + min)
 
+.slides
+  display table
+
 // Design
 article
-  opacity 0
-  transition 0.2s opacity
-  padding 50px
-  position absolute
+  vertical-align middle
+  display none
+  &.current
+    display table-cell
   &:before
   &:after
     content ''
@@ -41,28 +44,82 @@ article
     background-position center center
   &:after
     z-index -1
-    opacity 0.8
-    background-image radial-gradient(75vw, #fff 0%, #eee 50%, #765 100%)
+    opacity 0.95
+    background-image radial-gradient(75vw, #fff 0%, #eee 75%, #765 100%)
   &.plain
     &:before, &:after
       display none
   &.section
     &:after
-      background-image radial-gradient(75vw, #0AD159 0%, #22b75d 50%, #765 100%)
+      background-image radial-gradient(75vw, #66CC66 0%, #66CC66 50%, #765 100%)
+    h1, h2, h3, h4, h5, h6
+      color #fff
 
-.far-past { z-index: 3; }
-.past     { z-index: 4; }
-.current  { z-index: 5; opacity 1; }
-.next     { z-index: 6; }
-.far-next { z-index: 7; }
-
-
-for num in 1...13
+$imageCount = 30
+for num in 1...$imageCount
   // path = "images/bg/"+ random(1,2)+".jpg"
   path = "images/bg/" + num + ".jpg"
-  .slides > article:nth-child(39n+{num})
+  .slides > article:nth-child({$imageCount}n+{num})
     &:before
       background-image url(path)
 
+.build > *
+  transition opacity 0.2s ease-in-out 0.2s
+
+.to-build
+  opacity 0
+
 h1,h2,h3,h4,h5,h6
-  color #0AD159
+  text-align center
+  color #66CC66
+  text-shadow 0 0 1px #000
+  margin 1vh
+
+a
+a:visited
+a:hover
+  color #66CC66
+
+h1
+  font-size 10vw
+h2
+  font-size 5vw
+h3
+  font-size 2.5vw
+
+ul
+  font-size 3vw
+  line-height 2em
+  padding-left 10vw
+
+
+/* Pretty printing styles. Used with prettify.js. */
+/* Vim sunburst theme by David Leibovic */
+
+.slides
+  pre.prettyprint
+    background-color #000
+    border-radius 8px
+    width 90%
+    font-size 3vw
+    margin 0 auto
+    padding 0 2vw
+    white-space pre-wrap
+
+    .str { color: #65B042; } /* string  - green */
+    .kwd { color: #E28964; } /* keyword - dark pink */
+    .com { color: #AEAEAE; font-style: italic; } /* comment - gray */
+    .typ { color: #89bdff; } /* type - light blue */
+    .lit { color: #3387CC; } /* literal - blue */
+    .pun { color: #fff; } /* punctuation - white */
+    .pln { color: #fff; } /* plaintext - white */
+    .tag { color: #89bdff; } /* html/xml tag    - light blue */
+    .atn { color: #bdb76b; } /* html/xml attribute name  - khaki */
+    .atv { color: #65B042; } /* html/xml attribute value - green */
+    .dec { color: #3387CC; } /* decimal - blue */
+
+  /* Specify class=linenums on a pre to get line numbering */
+  ol.linenums { margin-top: 0; margin-bottom: 0; color: #AEAEAE; } /* IE indents via margin-left */
+  li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8 { list-style-type: none }
+  /* Alternate shading for lines */
+  li.L1,li.L3,li.L5,li.L7,li.L9 { }
