--- a/index.jade
+++ b/index.jade
@@ -18,9 +18,8 @@ html
           ul.build
             li ES6+ with optional typings
             li Compiles to plain JavaScript
-            li Developed by Microsoft
-            li Very good support in VS Code
-            li Pushed by Google
+            li Open source language by Microsoft
+            li Very good integration in VS Code
         article
           h1 Static typed languages
         article
@@ -83,8 +82,250 @@ html
           h1
             a(href="https://www.typescriptlang.org/play/index.html#src=function%20shiftplanPublishedMailer(employment)%20%7B%0D%0A%20%20%20%20console.log(%0D%0A%20%20%20%20%20%20%20%20employment.name%20%2B%20'%3C'%20%2B%20employment.email%20%2B%20'%3E'%0D%0A%20%20%20%20)%3B%0D%0A%7D%0D%0A")
               | Demo
-
-
-
+        article
+          h1 TypeScript Crash Course
+        article.section
+          h1 Type Annotations
+        article
+          h2 Basic Types
+          ul.build
+            li
+              | number
+              pre
+                | const luckyNumber: number = 8;
+            li
+              | boolean
+              pre
+                | const isActive: boolean = false;
+            li
+              | number
+              pre
+                | const name: string = 'Tamino';
+        article
+          ul
+            li
+              | number
+              pre
+                | const luckyNumber: number = 8;
+            li
+              | boolean
+              pre
+                | const isActive: boolean = false;
+            li
+              | number
+              pre
+                | const name: string = 'Tamino';
+            li
+              | any
+              pre
+                | const anyVar: any = FooBar;
+        article
+          h2 Multiple Types
+          ul.build
+            li
+              pre
+                | let param: string | undefined;
+            li
+              pre
+                | let param: string | undefined = 'foo';
+            li
+              pre
+                | let param: string | undefined = undefined;
+            li
+              pre
+                | let param: string | undefined = 8; // invalid
+        article
+          h2 Array Declarations
+          ul.build
+            li
+              | normal
+              pre
+                | const shifts: Shift[];
+            li
+              | alternate
+              pre
+                | const shifts: Array<Shift>;
+            li
+              | Multi Dimensional
+              pre
+                | const shiftLists: Shift[][];
+        article
+          h2 Dictionaries
+          ul.build
+            li
+              pre
+                | const phoneBook: { [name: string]: string };
+            li
+              pre
+                | phoneBook['Tamino'] = '01577 3752563';
+        article
+          h2 Functions
+          ul.build
+            li
+              pre
+                | const callback: ( shifts: Shift[]) => void;
+            li
+              pre
+                | class Foo {
+                |   bar(params: string[]): string { ... }
+                | }
+        article
+          h2 Function overloading
+          ul.build
+            li
+              pre
+                | class Foo {
+                |   bar(params: string[]): string { ... }
+                | }
+        article
+          h2 Function overloading
+          ul.build
+            li
+              pre
+                | class Foo {
+                |   bar(params: string[]): string | number { ... }
+                | }
+        article
+          h2 Function overloading
+          ul.build
+            li
+              pre
+                | class Foo {
+                |   bar(params: string[]): string
+                |   bar(params: number[]): number
+                |   { ... }
+                | }
+        article
+          h2 Classes
+          ul.build
+            li
+              pre
+                | class Foo {
+                |   public static readonly TABLE_NAME = 1;
+                |   private static _name: string;
+                | }
+        article
+          h2 Classes
+          ul
+            li
+              pre
+                | class Foo {
+                |   public static readonly TABLE_NAME;
+                |   private static _name: string;
+                |   static get TABLE_NAME {
+                |     return this._name.toUpperCase();
+                |   }
+                | }
+        article
+          h2 Interfaces
+          ul.build
+            li
+              pre
+                | interface IEmailable {
+                |   name: string;
+                |   email: string;
+                | }
+            li
+              pre
+                | interface Employment extends IEmailable
+            li
+              pre
+                | class Employment implements IEmailable
+        article
+          ul
+            li
+              pre
+                | interface IEmailable {
+                |   name: string;
+                |   email: string;
+                | }
+            li
+              pre
+                | interface Employment extends IEmailable
+            li
+              pre
+                | class Employment implements IEmailable
+            li
+              pre
+                | class A extends B implements D, E
+        article
+          h2 Enums
+          ul.build
+            li
+              pre
+                | enum Style {
+                |   NONE = 0,
+                |   BOLD = 1,
+                |   ITALIC = 1,
+                |   UNDERLINE = 1,
+                |   EMPHASIS = Style.BOLD | Style.ITALIC,
+                |   HYPERLINK = Style.BOLD | Style.UNDERLINE,
+                | }
+            li
+              pre
+                | enum ShiftplanStatus {
+                |   New,
+                |   Published,
+                | }
+        article
+          ul
+            li
+              pre
+                | enum Style {
+                |   NONE = 0,
+                |   BOLD = 1,
+                |   ITALIC = 1,
+                |   UNDERLINE = 1,
+                |   EMPHASIS = Style.BOLD | Style.ITALIC,
+                |   HYPERLINK = Style.BOLD | Style.UNDERLINE,
+                | }
+            li
+              pre
+                | enum ShiftplanStatus {
+                |   New,
+                |   Published,
+                | }
+        article
+          h2 Get Enum Values
+          ul.build
+            li
+              pre
+                | const style: number = Style.ITALIC; // 2
+            li
+              pre
+                | let status: string;
+                | status = Status[Status.New]; // 'New'
+        article
+          h2 Modules
+          ul.build
+            li
+              pre
+                | module Shyftplan {
+                |   export class Employment;
+                |   ...
+                | }
+        article
+          h2 Generics
+          ul.build
+            li
+              pre
+                | interface Array<T> {
+                |   ...
+                |   map<U>(cb: (value: T) => U): U[];
+                |   ...
+                | }
+        article.section
+          h1 Thats it
+        article
+          h2 How to Start?
+          ul.build
+            li
+              a(href="https://www.typescriptlang.org/play") Playground
+            li
+              pre npm install typescript -g
+            li
+              a(href="https://tamino-martinius.github.io/lets-talk-about---typescript") Slides & demo
+        article.section
+          h1 Questions?
 
       script(src='scripts.js')
