--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,9 @@ article:before {
   z-index: -2;
   -webkit-filter: grayscale(100%) contrast(160%);
           filter: grayscale(100%) contrast(160%);
-  background-size: cover;
-  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top left;
 }
 article:after {
   z-index: -1;
@@ -64,92 +65,8 @@ article.section h5,
 article.section h6 {
   color: #fff;
 }
-.slides > article:nth-child(30n+1):before {
+.slides > article:nth-child(1n+1):before {
   background-image: url("images/bg/1.jpg");
-}
-.slides > article:nth-child(30n+2):before {
-  background-image: url("images/bg/2.jpg");
-}
-.slides > article:nth-child(30n+3):before {
-  background-image: url("images/bg/3.jpg");
-}
-.slides > article:nth-child(30n+4):before {
-  background-image: url("images/bg/4.jpg");
-}
-.slides > article:nth-child(30n+5):before {
-  background-image: url("images/bg/5.jpg");
-}
-.slides > article:nth-child(30n+6):before {
-  background-image: url("images/bg/6.jpg");
-}
-.slides > article:nth-child(30n+7):before {
-  background-image: url("images/bg/7.jpg");
-}
-.slides > article:nth-child(30n+8):before {
-  background-image: url("images/bg/8.jpg");
-}
-.slides > article:nth-child(30n+9):before {
-  background-image: url("images/bg/9.jpg");
-}
-.slides > article:nth-child(30n+10):before {
-  background-image: url("images/bg/10.jpg");
-}
-.slides > article:nth-child(30n+11):before {
-  background-image: url("images/bg/11.jpg");
-}
-.slides > article:nth-child(30n+12):before {
-  background-image: url("images/bg/12.jpg");
-}
-.slides > article:nth-child(30n+13):before {
-  background-image: url("images/bg/13.jpg");
-}
-.slides > article:nth-child(30n+14):before {
-  background-image: url("images/bg/14.jpg");
-}
-.slides > article:nth-child(30n+15):before {
-  background-image: url("images/bg/15.jpg");
-}
-.slides > article:nth-child(30n+16):before {
-  background-image: url("images/bg/16.jpg");
-}
-.slides > article:nth-child(30n+17):before {
-  background-image: url("images/bg/17.jpg");
-}
-.slides > article:nth-child(30n+18):before {
-  background-image: url("images/bg/18.jpg");
-}
-.slides > article:nth-child(30n+19):before {
-  background-image: url("images/bg/19.jpg");
-}
-.slides > article:nth-child(30n+20):before {
-  background-image: url("images/bg/20.jpg");
-}
-.slides > article:nth-child(30n+21):before {
-  background-image: url("images/bg/21.jpg");
-}
-.slides > article:nth-child(30n+22):before {
-  background-image: url("images/bg/22.jpg");
-}
-.slides > article:nth-child(30n+23):before {
-  background-image: url("images/bg/23.jpg");
-}
-.slides > article:nth-child(30n+24):before {
-  background-image: url("images/bg/24.jpg");
-}
-.slides > article:nth-child(30n+25):before {
-  background-image: url("images/bg/25.jpg");
-}
-.slides > article:nth-child(30n+26):before {
-  background-image: url("images/bg/26.jpg");
-}
-.slides > article:nth-child(30n+27):before {
-  background-image: url("images/bg/27.jpg");
-}
-.slides > article:nth-child(30n+28):before {
-  background-image: url("images/bg/28.jpg");
-}
-.slides > article:nth-child(30n+29):before {
-  background-image: url("images/bg/29.jpg");
 }
 .build > * {
   -webkit-transition: opacity 0.2s ease-in-out 0.2s;
@@ -198,6 +115,7 @@ ul {
   margin: 0 auto;
   padding: 0 2vw;
   white-space: pre-wrap;
+  line-height: 3.5vw;
 /* string  - green */
 /* keyword - dark pink */
 /* comment - gray */
