--- a/index.jade
+++ b/index.jade
@@ -21,6 +21,13 @@ html
             li Open source language by Microsoft
             li Very good integration in VS Code
         article
+          h2 What is TypeScript?
+          ul
+            li ES6+ with optional typings
+            li Compiles to plain JavaScript
+            li Open source language by Microsoft
+            li Very good integration in VS Code & others
+        article
           h1 Static typed languages
         article
           h2 Static typed languages
