--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ h3 {
   font-size: 2.5vw;
 }
 ul {
+  list-style: none;
   font-size: 3vw;
   line-height: 2em;
   padding-left: 10vw;
@@ -113,7 +114,7 @@ ul {
   width: 90%;
   font-size: 3vw;
   margin: 0 auto;
-  padding: 0 2vw;
+  padding: 1vw 2vw;
   white-space: pre-wrap;
   line-height: 3.5vw;
 /* string  - green */
