--- a/styles.styl
+++ b/styles.styl
@@ -89,6 +89,7 @@ h3
   font-size 2.5vw
 
 ul
+  list-style none
   font-size 3vw
   line-height 2em
   padding-left 10vw
@@ -104,7 +105,7 @@ ul
     width 90%
     font-size 3vw
     margin 0 auto
-    padding 0 2vw
+    padding 1vw 2vw
     white-space pre-wrap
     line-height 3.5vw
 
