--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,9 @@ html
       section.slides.layout-regular.template-default
         article
           h2 Lets Talk about...
+          h1 &nbsp;
+        article
+          h2 Lets Talk about...
           h1 TypeScript
         article
           h1 What is TypeScript?
@@ -325,10 +328,10 @@ html
           ul.build
             li
               a(href="https://www.typescriptlang.org/play")
-                | https://www.typescriptlang.org/play
+                | Playground
             li
               a(href="https://tamino-martinius.github.io/lets-talk-about---typescript")
-                | https://tamino-martinius.github.io/lets-talk-about---typescript
+                | Slides
             li
               br
               pre npm install typescript -g
