--- a/styles.styl
+++ b/styles.styl
@@ -24,6 +24,19 @@ random(min,max)
 .slides
   display table
 
+.slide-area
+  height 100vh
+  width 10vw
+  position absolute
+#prev-slide-area
+  left 0
+  &:hover
+    background linear-gradient(90deg, #6c6 0, #fff0 10%);
+#next-slide-area
+  right 0
+  &:hover
+    background linear-gradient(270deg, #6c6 0, #fff0 10%);
+
 // Design
 article
   vertical-align middle
@@ -76,6 +89,7 @@ h1,h2,h3,h4,h5,h6
   text-shadow 0 0 1px #000
   margin 1vh
 
+em
 a
 a:visited
 a:hover
@@ -93,6 +107,14 @@ ul
   font-size 3vw
   line-height 2em
   padding-left 10vw
+
+video
+img
+  width 80%
+  max-width 80vw
+  max-height 80vh
+  display block
+  margin 0 auto
 
 
 /* Pretty printing styles. Used with prettify.js. */
@@ -121,8 +143,32 @@ ul
     .atv { color: #65B042; } /* html/xml attribute value - green */
     .dec { color: #3387CC; } /* decimal - blue */
 
-  /* Specify class=linenums on a pre to get line numbering */
-  ol.linenums { margin-top: 0; margin-bottom: 0; color: #AEAEAE; } /* IE indents via margin-left */
-  li.L0,li.L1,li.L2,li.L3,li.L5,li.L6,li.L7,li.L8 { list-style-type: none }
-  /* Alternate shading for lines */
-  li.L1,li.L3,li.L5,li.L7,li.L9 { }
+  .linenums
+    ol
+      margin 0
+      padding 0
+      list-style none
+      li
+        background #000
+    &.h0 li.L0
+    &.h1 li.L1
+    &.h2 li.L2
+    &.h3 li.L3
+    &.h4 li.L4
+    &.h5 li.L5
+    &.h6 li.L6
+    &.h7 li.L7
+    &.h8 li.L8
+    &.h9 li.L9
+      background #6c66
+
+ul.horizontal
+  padding 0
+  display flex
+  width 100%
+  ul
+    padding 0
+  li
+    padding 1vw
+    width 100%
+    text-align center
