Update for parcel usage

--- a/index.pug
+++ b/index.pug
@@ -3,10 +3,7 @@ html
   head
       title Lets talk about ... TypeScript
       meta(charset='utf-8')
-      script
-        | window.PERMANENT_URL_PREFIX = window.PERMANENT_URL_PREFIX || 'node_modules/lets-talk-about--template/assets/vendor/';
-      script(src='node_modules/lets-talk-about--template/assets/vendor/slides.js')
-      link(href='styles.css'  rel='stylesheet' type='text/css')
+      link(href='styles.styl'  rel='stylesheet' type='text/css')
   body
     section.slides.layout-regular.template-default
       article.build
@@ -337,4 +334,4 @@ html
       article.section
         h1 Questions?
 
-    script(src='node_modules/lets-talk-about--template/assets/scripts/main.js')
+    script(src='node_modules/lets-talk-about--template/main.js')
